--- a/Framework/Pages/TestPage.razor
+++ b/Framework/Pages/TestPage.razor
@@ -8,5 +8,7 @@
 
 @* <TestComp /> *@
 
-@* <Minigame MinigameDefClass="Framework.Minigames.LaurinsRain" OnFinished="((success) => Console.WriteLine(success))" /> *@
-<Minigame MinigameDefClass="Framework.Minigames.MinigameDefClasses.MyMinigame1" OnFinished="((success) => Console.WriteLine(success))" />
+@* <Minigame MinigameDefClass="Framework.Minigames.LaurinsRain" OnFinished="((success) => Console.WriteLine(success))"
+/> *@
+<Minigame MinigameDefClass="Framework.Minigames.MinigameDefClasses.GarbageCollect"
+    OnFinished="((success) => Console.WriteLine(success))" />
